--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   background-color: hsl(0, 12%, 97%);
-  font-family: 'Roboto', sans-serif;
+  font-family: "Caladea", serif;
   font-weight: 400;
   font-style: normal;
   color: #111111;
