--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,37 @@ img {
 button {
   cursor: pointer;
 }
+
+.container {
+  margin: 0 auto;
+  padding: 80px 10px;
+}
+
+@media screen and (max-width: 374px) {
+  .container {
+    max-width: 374px;
+  }
+}
+
+@media screen and (min-width: 375px) {
+  .container {
+    padding: 80px 20px;
+    width: 375px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1279px) {
+  .container {
+    width: 768px;
+    padding-left: 32px;
+    padding-right: 32px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .container {
+    width: 1280px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
